--- a/carioca-pwa.html
+++ b/carioca-pwa.html
@@ -37,40 +37,187 @@
     const STORAGE_KEY = "carioca-scorekeeper-v1";
     function useLocalStorage(key, initial) {
       const [state, setState] = useState(() => {
-        try { return JSON.parse(localStorage.getItem(key)) || initial; }
+        try { const raw = localStorage.getItem(key); return raw ? JSON.parse(raw) : initial; }
         catch { return initial; }
       });
       useEffect(() => { try { localStorage.setItem(key, JSON.stringify(state)); } catch {} }, [key,state]);
       return [state,setState];
+    }
+    // helpers
+    function addPlayerByName(name, arr) {
+      const trimmed = (name||"").trim();
+      if (!trimmed) return arr;
+      return [...arr, { id: uid(), name: trimmed }];
+    }
+    function renamePlayerById(id, name, arr) {
+      const trimmed = (name||"").trim();
+      if (!trimmed) return arr;
+      return arr.map(p => p.id === id ? { ...p, name: trimmed } : p);
     }
     function App(){
       const [players,setPlayers]=useLocalStorage(STORAGE_KEY+":players",[
         {id:uid(),name:"Player 1"},{id:uid(),name:"Player 2"}]);
       const [rounds,setRounds]=useLocalStorage(STORAGE_KEY+":rounds",DEFAULT_ROUNDS);
       const [scores,setScores]=useLocalStorage(STORAGE_KEY+":scores",{});
+
+      // add & rename UI
       const [newName,setNewName]=useState("");
-      const totals=useMemo(()=>{let t={};players.forEach(p=>t[p.id]=0);rounds.forEach(r=>{let row=scores[r.id]||{};players.forEach(p=>{let v=row[p.id];if(typeof v==="number")t[p.id]+=v;});});return t;},[players,rounds,scores]);
-      const leaderId=useMemo(()=>{if(!players.length)return null;return players.slice().sort((a,b)=>totals[a.id]-totals[b.id])[0].id;},[players,totals]);
+      const [renamingId,setRenamingId]=useState(null);
+      const [renameValue,setRenameValue]=useState("");
+
+      const totals=useMemo(()=>{
+        let t={}; players.forEach(p=>t[p.id]=0);
+        rounds.forEach(r=>{let row=scores[r.id]||{}; players.forEach(p=>{let v=row[p.id]; if(typeof v==="number"&&!Number.isNaN(v)) t[p.id]+=v;});});
+        return t;
+      },[players,rounds,scores]);
+      const leaderId=useMemo(()=>{
+        if(!players.length) return null;
+        return players.map(p=>({id:p.id, total: totals[p.id]??0})).sort((a,b)=>a.total-b.total)[0].id;
+      },[players,totals]);
       function setScore(rid,pid,val){setScores(prev=>({...prev,[rid]:{...(prev[rid]||{}),[pid]:val}}));}
-      return(<div className="p-4 space-y-6">
-        <section className="p-4 border rounded-xl"><h2>Players</h2>
-          <input value={newName} onChange={e=>setNewName(e.target.value)} placeholder="New player" className="border p-1"/>
-          <button onClick={()=>{if(newName.trim()){setPlayers([...players,{id:uid(),name:newName.trim()}]);setNewName("");}}}>Add</button>
-          <ul>{players.map(p=><li key={p.id}>{p.name} {leaderId===p.id?"🏆":""}</li>)}</ul>
+
+      function handleAdd(){
+        const next = addPlayerByName(newName, players);
+        if (next !== players){ setPlayers(next); setNewName(""); }
+      }
+      function startRename(id){
+        const p = players.find(x=>x.id===id); if(!p) return;
+        setRenamingId(id); setRenameValue(p.name);
+      }
+      function saveRename(){
+        if(!renamingId) return;
+        const next = renamePlayerById(renamingId, renameValue, players);
+        setPlayers(next); setRenamingId(null); setRenameValue("");
+      }
+      function cancelRename(){ setRenamingId(null); setRenameValue(""); }
+
+      // tiny self-tests (opt-in with ?test=1)
+      useEffect(()=>{
+        const qs = new URLSearchParams(location.search);
+        if(!qs.has("test")) return;
+        try {
+          let arr=[{id:"a",name:"Alex"}];
+          arr = addPlayerByName(" Bob ", arr);
+          console.assert(arr.length===2 && arr[1].name==="Bob", "addPlayerByName failed");
+          const rid = arr[1].id;
+          const arr2 = renamePlayerById(rid, "Bobby", arr);
+          console.assert(arr2[1].name==="Bobby", "renamePlayerById failed");
+          console.log("[Self-tests] OK");
+        } catch(e){ console.error("Tests failed", e); }
+      },[]);
+
+      // keyboard nav
+      const inputRefs = useRef({});
+      const registerRef = (key) => (el) => { inputRefs.current[key]=el; };
+      function onKeyMove(e,rIdx,cIdx){
+        const dirs = { ArrowUp:[-1,0], ArrowDown:[1,0], ArrowLeft:[0,-1], ArrowRight:[0,1], Enter:[1,0] };
+        const d = dirs[e.key]; if(!d) return;
+        e.preventDefault();
+        const nr = Math.max(0, Math.min(rounds.length-1, rIdx+d[0]));
+        const nc = Math.max(0, Math.min(players.length-1, cIdx+d[1]));
+        const key = `${rounds[nr].id}:${players[nc].id}`;
+        const el = inputRefs.current[key]; if(el){ el.focus(); el.select(); }
+      }
+
+      return(<div className="max-w-5xl mx-auto p-4 space-y-6">
+        <header className="flex justify-between items-center py-2">
+          <h1 className="text-2xl font-bold">Carioca Scorekeeper</h1>
+          <div className="text-sm text-gray-600">Lower total wins</div>
+        </header>
+
+        <section className="p-4 border rounded-xl">
+          <h2 className="font-semibold mb-2">Players</h2>
+          <div className="flex gap-2 items-center flex-wrap">
+            <input className="border px-3 py-2 rounded" placeholder="New player name"
+              value={newName} onChange={e=>setNewName(e.target.value)} onKeyDown={e=>{if(e.key==='Enter') handleAdd();}}/>
+            <button className="border px-3 py-2 rounded" onClick={handleAdd} disabled={!newName.trim()}>Add</button>
+          </div>
+
+          <div className="mt-3 grid gap-2 sm:grid-cols-2 lg:grid-cols-3">
+            {players.map(p=>(
+              <div key={p.id} className="flex items-center justify-between p-3 rounded bg-gray-50 border">
+                <div className="font-medium">
+                  {renamingId===p.id ? (
+                    <input autoFocus className="border rounded px-2 py-1" value={renameValue}
+                      onChange={e=>setRenameValue(e.target.value)}
+                      onKeyDown={e=>{ if(e.key==='Enter') saveRename(); if(e.key==='Escape') cancelRename(); }}/>
+                  ) : (<>
+                    {p.name} {leaderId===p.id && <span className="text-xs ml-2 bg-emerald-100 text-emerald-700 px-2 py-0.5 rounded">leader</span>}
+                  </>)}
+                </div>
+                <div className="flex gap-1">
+                  {renamingId===p.id ? (<>
+                    <button className="px-2 py-1 border rounded" onClick={saveRename}>Save</button>
+                    <button className="px-2 py-1 border rounded" onClick={cancelRename}>Cancel</button>
+                  </>) : (<>
+                    <button className="px-2 py-1 border rounded" onClick={()=>startRename(p.id)}>Rename</button>
+                  </>)}
+                </div>
+              </div>
+            ))}
+          </div>
         </section>
-        <section className="p-4 border rounded-xl"><h2>Rounds</h2>
-          <table className="w-full"><thead><tr><th>Round</th>{players.map(p=><th key={p.id}>{p.name}</th>)}</tr></thead>
-          <tbody>{rounds.map((r,ri)=><tr key={r.id}><td>{ri+1}. {r.label}</td>
-            {players.map((p,ci)=>{const val=scores[r.id]?.[p.id]??"";return <td key={p.id}><input value={val} onChange={e=>{let raw=e.target.value.trim();let num=raw===""?null:Number(raw);if(raw!==""&&isNaN(num))return;setScore(r.id,p.id,num);}} className="border w-16 text-right"/></td>;})}
-          </tr>)}</tbody>
-          <tfoot><tr><td>Total</td>{players.map(p=><td key={p.id}>{totals[p.id]}</td>)}</tr></tfoot></table>
+
+        <section className="p-4 border rounded-xl">
+          <div className="flex items-start justify-between gap-3 flex-wrap">
+            <div>
+              <h2 className="font-semibold">Rounds</h2>
+              <p className="text-sm text-gray-500">Labels are a guide only—enter any scoring you use.</p>
+            </div>
+          </div>
+
+          <div className="overflow-auto mt-3">
+            <table className="w-full text-sm">
+              <thead>
+                <tr className="bg-gray-100">
+                  <th className="text-left p-2 min-w-[14rem]">Round</th>
+                  {players.map(p=> <th key={p.id} className="text-right p-2 min-w-24">{p.name}</th>)}
+                </tr>
+              </thead>
+              <tbody>
+                {rounds.map((r,ri)=>(
+                  <tr key={r.id} className="border-t align-top">
+                    <td className="p-2">{ri+1}. {r.label}</td>
+                    {players.map((p,ci)=>{
+                      const key = `${r.id}:${p.id}`;
+                      const val = scores[r.id]?.[p.id] ?? "";
+                      const isLeader = leaderId===p.id;
+                      return (
+                        <td key={key} className="p-2 text-right">
+                          <input ref={registerRef(key)} inputMode="numeric"
+                            className={`w-20 text-right px-2 py-1 rounded border ${isLeader?'shadow-inner':''}`}
+                            placeholder="0"
+                            value={val===null? "": val}
+                            onChange={e=>{
+                              const raw = e.target.value.trim();
+                              const num = raw==="" ? null : Number(raw);
+                              if(raw!=="" && Number.isNaN(num)) return;
+                              setScore(r.id, p.id, num);
+                            }}
+                            onKeyDown={e=>onKeyMove(e,ri,ci)}
+                          />
+                        </td>
+                      );
+                    })}
+                  </tr>
+                ))}
+              </tbody>
+              <tfoot>
+                <tr className="border-t-2">
+                  <td className="p-2 font-semibold">TOTAL</td>
+                  {players.map(p=> <td key={p.id} className="p-2 text-right font-semibold">{totals[p.id]??0}</td>)}
+                </tr>
+              </tfoot>
+            </table>
+          </div>
         </section>
-      </div>);}
+      </div>);
+    }
     ReactDOM.createRoot(document.getElementById("root")).render(<App/>);
   </script>
   <script>
     if('serviceWorker' in navigator){
-      window.addEventListener('load',()=>{navigator.serviceWorker.register('./sw.js').catch(console.error)})
+      window.addEventListener('load',()=>{navigator.serviceWorker.register('./sw.js').catch(console.error)});
     }
   </script>
 </body>
