--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-<!doctype html><meta http-equiv="refresh" content="0; url=./carioca-pwa.html">
+<!doctype html>
+<meta charset="utf-8">
+<meta http-equiv="refresh" content="0; url=./carioca-pwa.html">
+<link rel="canonical" href="./carioca-pwa.html">
+<title>Loading…</title>
+<p>Loading Carioca Scorekeeper… If you are not redirected, <a href="./carioca-pwa.html">tap here</a>.</p>
