--- a/carioca-pwa.html
+++ b/carioca-pwa.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Carioca Scorekeeper v1.4</title>
+  <title>Carioca Scorekeeper</title>
   <link rel="manifest" href="./manifest.webmanifest">
   <link rel="apple-touch-icon" href="./icons/icon-192.png">
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -56,6 +56,9 @@
       const [renamingId,setRenamingId]=useState(null);
       const [renameValue,setRenameValue]=useState("");
 
+      // undo state: { player, rows }
+      const [lastDeleted, setLastDeleted] = useState(null);
+
       const totals=useMemo(()=>{
         let t={}; players.forEach(p=>t[p.id]=0);
         rounds.forEach(r=>{let row=scores[r.id]||{}; players.forEach(p=>{let v=row[p.id]; if(typeof v==="number"&&!Number.isNaN(v)) t[p.id]+=v;});});
@@ -85,6 +88,58 @@
       }
       function cancelRename(){ setRenamingId(null); setRenameValue(""); }
 
+      function removePlayer(id){
+        const p = players.find(x=>x.id===id);
+        const ok = window.confirm ? window.confirm(`Remove “${p?.name||"this player"}”? This will also remove their scores.`) : true;
+        if(!ok) return;
+
+        const snapshot = {};
+        for (const r of rounds) {
+          const row = scores[r.id] || {};
+          if (Object.prototype.hasOwnProperty.call(row, id)) {
+            snapshot[r.id] = row[id];
+          }
+        }
+        setLastDeleted({ player: p, rows: snapshot });
+
+        const nextPlayers = players.filter(x=>x.id!==id);
+        setPlayers(nextPlayers);
+        setScores(prev => {
+          const ns = {...prev};
+          for (const r of rounds) {
+            const row = {...(ns[r.id]||{})};
+            if (id in row) delete row[id];
+            ns[r.id] = row;
+          }
+          return ns;
+        });
+      }
+
+      function undoLastRemoval(){
+        if (!lastDeleted) return;
+        const { player, rows } = lastDeleted;
+        setPlayers(prev => [...prev, { id: player.id, name: player.name }]);
+        setScores(prev => {
+          const ns = { ...prev };
+          for (const r of rounds) {
+            const row = { ...(ns[r.id] || {}) };
+            if (rows.hasOwnProperty(r.id)) {
+              row[player.id] = rows[r.id];
+            }
+            ns[r.id] = row;
+          }
+          return ns;
+        });
+        setLastDeleted(null);
+      }
+
+      function clearRound(roundId){
+        const r = rounds.find(rr => rr.id === roundId);
+        const ok = window.confirm ? window.confirm(`Clear all scores for “${r?.label||"this round"}”?`) : true;
+        if(!ok) return;
+        setScores(prev => ({ ...prev, [roundId]: {} }));
+      }
+
       // keyboard nav
       const inputRefs = useRef({});
       const registerRef = (key) => (el) => { inputRefs.current[key]=el; };
@@ -103,6 +158,16 @@
           <h1 className="text-2xl font-bold">Carioca Scorekeeper</h1>
           <div className="text-sm text-gray-600">Lower total wins</div>
         </header>
+
+        {lastDeleted && (
+          <div className="p-3 border rounded-xl bg-yellow-50 border-yellow-200 flex items-center justify-between">
+            <div>Removed <strong>{lastDeleted.player?.name || "a player"}</strong>.</div>
+            <div className="flex gap-2">
+              <button className="px-3 py-1 border rounded bg-white" onClick={undoLastRemoval}>Undo</button>
+              <button className="px-3 py-1 border rounded" onClick={()=>setLastDeleted(null)}>Dismiss</button>
+            </div>
+          </div>
+        )}
 
         <section className="p-4 border rounded-xl">
           <div className="flex items-center justify-between">
@@ -139,6 +204,7 @@
                         <button className="px-2 py-1 border rounded" onClick={cancelRename}>Cancel</button>
                       </>) : (<>
                         <button className="px-2 py-1 border rounded" onClick={()=>startRename(p.id)}>Rename</button>
+                        <button className="px-2 py-1 border rounded text-red-600" onClick={()=>removePlayer(p.id)}>Remove</button>
                       </>)}
                     </div>
                   </div>
@@ -162,6 +228,7 @@
                 <tr className="bg-gray-100">
                   <th className="text-left p-2 min-w-[14rem]">Round</th>
                   {players.map(p=> <th key={p.id} className="text-right p-2 min-w-24">{p.name}</th>)}
+                  <th className="p-2">Actions</th>
                 </tr>
               </thead>
               <tbody>
@@ -189,6 +256,9 @@
                         </td>
                       );
                     })}
+                    <td className="p-2">
+                      <button className="px-2 py-1 border rounded" onClick={()=>clearRound(r.id)}>Clear round</button>
+                    </td>
                   </tr>
                 ))}
               </tbody>
@@ -196,6 +266,7 @@
                 <tr className="border-t-2">
                   <td className="p-2 font-semibold">TOTAL</td>
                   {players.map(p=> <td key={p.id} className="p-2 text-right font-semibold">{totals[p.id]??0}</td>)}
+                  <td></td>
                 </tr>
               </tfoot>
             </table>
