--- a/carioca-pwa.html
+++ b/carioca-pwa.html
@@ -155,7 +155,7 @@
 
       return(<div className="max-w-5xl mx-auto p-4 space-y-6">
         <header className="flex justify-between items-center py-2">
-          <h1 className="text-2xl font-bold">Carioca Scorekeeper</h1>
+          <h1 className="text-2xl font-bold">Carioca Scorekeeper v1.5</h1>
           <div className="text-sm text-gray-600">Lower total wins</div>
         </header>
 
