--- a/carioca-pwa.html
+++ b/carioca-pwa.html
@@ -243,7 +243,7 @@
       return(<div className="max-w-6xl mx-auto p-4 space-y-6">
         <header className="flex flex-col gap-3 md:flex-row md:items-center md:justify-between">
           <div className="flex items-center gap-2">
-            <h1 className="text-2xl font-bold">Carioca Scorekeeper</h1>
+            <h1 className="text-2xl font-bold">Carioca Scorekeeper v1.6</h1>
             <span className="text-sm text-gray-600">(multiple games)</span>
           </div>
           <div className="flex flex-wrap items-center gap-2">
