--- a/carioca-pwa.html
+++ b/carioca-pwa.html
@@ -346,7 +346,7 @@
                         </td>
                       );
                     })}
-                    <td className="p-2">
+                    <td className="p-2 text-center">
                       <button 
                         className="p-2 border rounded hover:bg-gray-100"
                         aria-label="Clear round"
