--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body class="min-h-screen bg-slate-100 text-slate-900">
   <main class="max-w-3xl mx-auto px-4 py-10">
-    <h1 class="text-3xl font-bold mb-3">Carioca</h1>
+    <h1 class="text-3xl font-bold mb-1">Carioca</h1>
+    <p class="text-xs text-slate-500 mb-2">Version v0.4</p>
     <p class="text-slate-700 mb-8">Choose which app you want to use.</p>
     <div class="grid md:grid-cols-2 gap-4">
       <a class="block p-5 bg-white rounded-xl border border-slate-200 shadow-sm hover:shadow transition" href="./carioca-pwa.html">
