Differentiate table meld targets and improve straight/layoff handling (#9)
* Differentiate table meld targets with indexed card previews

* Restore distinct crazy/color/royal straight constraints

--- a/carioca-game.html
+++ b/carioca-game.html
@@ -20,7 +20,7 @@
   <script type="text/babel">
     const { useEffect, useMemo, useState } = React;
 
-    const APP_VERSION = "v0.4";
+    const APP_VERSION = "v0.5";
 
     const NS = "carioca-game-v2";
     const GAMES_KEY = NS + ":games";
@@ -71,6 +71,10 @@
     function cardColorWhenActive(c, active){
       if(active) return "text-white";
       return cardColorClass(c);
+    }
+    function formatMeldLabel(meld, index){
+      const cardsPreview = meld.cards.map(cardLabel).join(" ");
+      return `${meld.owner} - ${componentDesc(meld.type)} #${index+1}: ${cardsPreview}`;
     }
     function cardPoint(c){ return c.joker ? 30 : (CARD_POINTS[c.rank] ?? Number(c.rank)); }
 
@@ -133,15 +137,26 @@
       return rankNum(card.rank, false);
     }
 
-    function sameSuitNaturals(cards){
+    function getStraightSuitMode(kind){
+      if(kind === "crazy13") return "any";
+      if(kind === "color13") return "color";
+      return "suit";
+    }
+
+    function naturalsMatchSuitMode(cards, mode){
       const naturals = cards.filter(c=>!c.joker);
       if(!naturals.length) return true;
+      if(mode === "any") return true;
+      if(mode === "color"){
+        const color = RED_SUITS.has(naturals[0].suit) ? "red" : "black";
+        return naturals.every(c => (RED_SUITS.has(c.suit) ? "red" : "black") === color);
+      }
       return naturals.every(c=>c.suit === naturals[0].suit);
     }
 
-    function findUnorderedStraightAssignment(cards, len){
+    function findUnorderedStraightAssignment(cards, len, mode="suit"){
       if(cards.length !== len || len < 3 || len > 13) return null;
-      if(!sameSuitNaturals(cards)) return null;
+      if(!naturalsMatchSuitMode(cards, mode)) return null;
       const naturals = cards.filter(c=>!c.joker);
       const jokers = cards.filter(c=>c.joker);
       const naturalByRank = new Map();
@@ -171,10 +186,10 @@
       return null;
     }
 
-    function resolveOrderedStraight(cards){
+    function resolveOrderedStraight(cards, mode="suit"){
       const len = cards.length;
       if(len < 3 || len > 13) return null;
-      if(!sameSuitNaturals(cards)) return null;
+      if(!naturalsMatchSuitMode(cards, mode)) return null;
       for(let start=1; start<=13; start++){
         let ok = true;
         const ranks = [];
@@ -189,29 +204,30 @@
       return null;
     }
 
-    function normalizeStraightCards(cards){
-      const assignment = findUnorderedStraightAssignment(cards, cards.length);
+    function normalizeStraightCards(cards, kind){
+      const assignment = findUnorderedStraightAssignment(cards, cards.length, getStraightSuitMode(kind));
       return assignment ? assignment.slots : null;
     }
 
     function validateStraight(cards, kind){
       const len = kind === "straight4" ? 4 : 13;
-      return !!findUnorderedStraightAssignment(cards, len);
+      return !!findUnorderedStraightAssignment(cards, len, getStraightSuitMode(kind));
     }
 
-    function canExtendStraightOnSide(meldCards, addedCards, side){
+    function canExtendStraightOnSide(meldCards, addedCards, side, kind){
       if(!addedCards.length) return null;
+      const mode = getStraightSuitMode(kind);
       let base = meldCards;
-      let baseState = resolveOrderedStraight(base);
+      let baseState = resolveOrderedStraight(base, mode);
       if(!baseState){
-        base = normalizeStraightCards(meldCards) || meldCards;
-        baseState = resolveOrderedStraight(base);
+        base = normalizeStraightCards(meldCards, kind) || meldCards;
+        baseState = resolveOrderedStraight(base, mode);
       }
       if(!baseState) return null;
 
       const candidate = side === "left" ? [...addedCards, ...base] : [...base, ...addedCards];
       if(candidate.length > 13) return null;
-      const candidateState = resolveOrderedStraight(candidate);
+      const candidateState = resolveOrderedStraight(candidate, mode);
       if(!candidateState) return null;
 
       const offset = side === "left" ? addedCards.length : 0;
@@ -275,7 +291,7 @@
         const naturals = merged.filter(c=>!c.joker);
         return naturals.length === 0 || naturals.every(c=>c.rank === naturals[0].rank) ? merged : null;
       }
-      return canExtendStraightOnSide(meld.cards, cards, "right") || canExtendStraightOnSide(meld.cards, cards, "left");
+      return canExtendStraightOnSide(meld.cards, cards, "right", meld.type) || canExtendStraightOnSide(meld.cards, cards, "left", meld.type);
     }
 
     function canLayoffToMeld(meld, cards){
@@ -417,7 +433,7 @@
           const comp = findMatchingComponent(roundDef.components, done, cards);
           if(!comp) return { ...prev, message: "Selected cards do not match an unmet objective meld." };
           const next = structuredClone(prev);
-          const meldCards = comp === "set3" ? cards : normalizeStraightCards(cards);
+          const meldCards = comp === "set3" ? cards : normalizeStraightCards(cards, comp);
           next.round.tableMelds.push({ id: uid(), owner: "human", type: comp, cards: meldCards || cards });
           next.turnAddedCardIds = [...(next.turnAddedCardIds || []), ...cards.map(c=>c.id)];
           next.round.laid.human.push(comp);
@@ -539,7 +555,7 @@
             <button className="px-2 py-1 border rounded" disabled={state.currentPlayer!=="human" || !state.hasDrawn || humanObjectiveComplete} onClick={layObjective}>Lay objective meld</button>
             <select className="border rounded px-2 py-1" value={meldTarget} onChange={e=>setMeldTarget(e.target.value)}>
               <option value="">Select meld target</option>
-              {state.round.tableMelds.map(m=><option key={m.id} value={m.id}>{m.owner} - {componentDesc(m.type)} ({m.cards.length})</option>)}
+              {state.round.tableMelds.map((m, i)=><option key={m.id} value={m.id}>{formatMeldLabel(m, i)}</option>)}
             </select>
             <button className="px-2 py-1 border rounded" disabled={state.currentPlayer!=="human" || !state.hasDrawn} onClick={addToMeld}>Add to meld</button>
             <button className="px-2 py-1 border rounded bg-slate-900 text-white" disabled={state.currentPlayer!=="human" || !state.hasDrawn} onClick={discard}>Discard</button>
@@ -568,7 +584,7 @@
         <section className="p-3 rounded bg-white shadow">
           <div className="font-semibold">Table melds</div>
           <div className="grid md:grid-cols-2 gap-2 mt-2">
-            {state.round.tableMelds.map(m=><div className="border rounded p-2" key={m.id}><div className="text-sm font-medium">{m.owner} — {componentDesc(m.type)}</div><div className="flex flex-wrap gap-1">{m.cards.map(c=><span key={c.id} className={`px-1.5 py-0.5 rounded ${cardColorClass(c)} ${state.turnAddedCardIds?.includes(c.id) ? "bg-amber-200 ring-1 ring-amber-400" : ""}`}>{cardLabel(c)}</span>)}</div></div>)}
+            {state.round.tableMelds.map((m, i)=><div className="border rounded p-2" key={m.id}><div className="text-sm font-medium">{formatMeldLabel(m, i)}</div><div className="flex flex-wrap gap-1">{m.cards.map(c=><span key={c.id} className={`px-1.5 py-0.5 rounded ${cardColorClass(c)} ${state.turnAddedCardIds?.includes(c.id) ? "bg-amber-200 ring-1 ring-amber-400" : ""}`}>{cardLabel(c)}</span>)}</div></div>)}
             {!state.round.tableMelds.length && <div className="text-sm text-slate-600">No melds yet.</div>}
           </div>
         </section>
@@ -656,7 +672,7 @@
         const used = new Set();
         for(const m of newMelds){
           m.cards.forEach(c=>used.add(c.id));
-          const meldCards = m.type === "set3" ? m.cards : normalizeStraightCards(m.cards);
+          const meldCards = m.type === "set3" ? m.cards : normalizeStraightCards(m.cards, m.type);
           next.round.tableMelds.push({ id: uid(), owner: "computer", type: m.type, cards: meldCards || m.cards });
           next.turnAddedCardIds.push(...m.cards.map(c=>c.id));
           next.round.laid.computer.push(m.type);
